# Private_IM

./: .gitignore  make_project.bat  make_project_xcode.sh  read_me.txt
doc/: 3rd_lib_build.bat  Near-term_planning.md  Near-term_planning.txt  build_note.txt  db.sql
src/: CMakeLists.txt
src/CMake/: c_flag_overrides.cmake  cxx_flag_overrides.cmake
src/client/c_framework/: CMakeLists.txt  im_c_framework.cpp
src/client/c_framework/test/: test_c_framework.cpp  test_c_framework.h
src/client/c_login/: CMakeLists.txt  im_c_login.cpp  pch.h
src/client/c_login/test/: test_c_login.cpp  test_c_login.h
src/client/client_login/: CMakeLists.txt  im_client_login.cpp
src/client/client_login/test/: pch.h  test_client_login.cpp
src/client/include/: im_login.h
src/client/login/: CMakeLists.txt  im_login.cpp
src/client/login/test/: test_login.cpp
src/include/client/: im_c_framework.h  im_c_login.h  im_client_login.h
src/include/lib/: im_coding.h  im_config.h  im_global_val.h  im_log.h  im_mqtt.h  im_msg.h  im_msg_proto.h  im_type_def.h  im_version.h
src/include/lib/3rd_lib/sqlite3/: README.txt
src/include/lib/base/: async.hpp  character_conversion.hpp  container.hpp  cross_system.hpp  debug.hpp  error.hpp  format_str.hpp  log.hpp  path.hpp  rand.hpp  system.hpp  task.hpp  thread_pool.hpp  time.hpp  type_def.h  uuid.hpp
src/include/server/: im_s_sql.h  im_s_user_manager.h  im_server_sql.h
src/lib/coding/: CMakeLists.txt  coding_list.h  im_coding.cpp
src/lib/coding/libiconv/: README.txt
src/lib/coding/libiconv/include/: iconv.h
src/lib/coding/libiconv/lib/: config.h  iconv.c
src/lib/coding/test/: stdafx.h  test_coding.cpp  test_coding.h
src/lib/config/: CMakeLists.txt  im_config.cpp
src/lib/config/test/: test_config.cpp
src/lib/include/: im_coding.h  im_config.h  im_global_val.h  im_log.h  im_msg_mqtt_client.h  im_msg_mqtt_client.hpp  im_msg_proto.h  im_msg_proto.hpp  im_net_communication.h  im_net_communication.hpp  im_sql_base.h  im_ssl_base.h
src/lib/include/3rd_lib/sqlite3/: sqlite3.h  sqlite3ext.h
src/lib/include/base/: async.hpp  character_conversion.hpp  debug.hpp  error.hpp  format_str.hpp  log.hpp  path.hpp  string_operation.hpp  task.hpp  time.hpp  type_def.h  uuid.hpp
src/lib/log/: CMakeLists.txt  im_log.cpp
src/lib/log/test/: test_log.cpp
src/lib/mqtt/: CMakeLists.txt  mqtt_base.cpp  mqtt_client_base.h  pch.h
src/lib/mqtt/test/: test_mqtt.cpp
src/lib/msg/: CMakeLists.txt  im_msg.cpp  im_msg_client.cpp  im_msg_server.cpp  im_msg_server_manager.cpp  im_pub_msg.cpp  pch.h
src/lib/msg/test/: test_msg.cpp
src/lib/msg_mqtt_client/: CMakeLists.txt  im_msg_mqtt_client.cpp  mqtt_client.cpp  mqtt_client.h  mqtt_client_base.cpp  mqtt_client_base.h  stdafx.h
src/lib/msg_mqtt_client/test/: test_msg_mqtt_client.cpp
src/lib/msg_proto/: CMakeLists.txt  im_msg_proto.cpp  im_msg_proto_manager.cpp  login_channel.cpp  pch.h  proto_global.cpp
src/lib/msg_proto/proto/: proto_global.cpp  proto_private.cpp
src/lib/msg_proto/protobuf/: msg.proto  token.proto
src/lib/msg_proto/test/: test_msg_proto.cpp  test_msg_proto.h
src/lib/net_communication/: CMakeLists.txt  im_net_communication.cpp  net_communication.cpp  net_communication.h  stdafx.h
src/lib/net_communication/test/: stdafx.h  test_net_communication.cpp  test_net_communication.h  test_transmission.cpp
src/lib/sql/: CMakeLists.txt  im_sql.cpp
src/lib/sql/test/: test_sql.cpp  test_sql.h
src/lib/sql_base/: CMakeLists.txt  im_sql_base.cpp
src/lib/sql_base/test/: stdafx.cpp  test_sql_base.cpp
src/lib/ssl_base/: CMakeLists.txt  im_aes.cpp  im_rsa.cpp  im_ssl_base.cpp  im_token.cpp
src/lib/ssl_base/test/: test_ssl_base.cpp
src/plugin/include/: im_plugin_mosquitto.h  im_plugin_py.h
src/plugin/plugin_mosquitto/: CMakeLists.txt  im_plugin_mosquitto.cpp  plugin_mosq.cpp  plugin_mosq.h
src/plugin/plugin_mosquitto/test/: test_plugin_mosquitto.cpp
src/plugin/plugin_py/: CMakeLists.txt  im_plugin_py.cpp
src/plugin/plugin_py/test/: test_plugin_py.cpp
src/server/include/: im_server_main.h  im_server_main.hpp  im_server_sql.h
src/server/plugin/plugin_mosquitto/: CMakeLists.txt  im_plugin_mosquitto.cpp  im_plugin_mosquitto.h  plugin_mosq.cpp  plugin_mosq.h
src/server/s_sql/: CMakeLists.txt  im_s_sql.cpp  pch.h
src/server/s_sql/test/: test_s_sql.cpp  test_s_sql.h
src/server/s_user_manager/: CMakeLists.txt  im_s_user_manager.cpp  pch.cpp  s_user_manager.cpp  s_user_manager.h
src/server/s_user_manager/test/: pch.h  test_s_user_manager.cpp  test_s_user_manager.h
src/server/server_main/: CMakeLists.txt  im_server_main.cpp  management.cpp  management.h  pch.h  server_main.cpp  server_main.h
src/server/server_main/frame/: publish_channel.cpp  publish_channel.h  server_frame_work.cpp  server_frame_work.h
src/server/server_main/login/: server_login.cpp  server_login.h  user_login.cpp  user_login.h
src/server/server_main/test/: test_server_main.cpp
src/server/server_main/users/: pri_channel.cpp  pri_channel.h  server_user.cpp  server_user.h  server_user_manager.cpp  server_user_manager.h
src/server/server_sql/: CMakeLists.txt  im_server_sql.cpp
src/server/server_sql/test/: test_server_sql.cpp
tools/: 3rd_lib_info.txt  add_prj.bat  project_info.txt  update.bat
tools/3rd_lib/: run_mqtt.bat
tools/3rd_lib/mosquitto/: 0001-lib-cmake-pthread-fixed-path.patch  0002-perfect-static-procect-for-windows.patch
tools/default_config/: global.config  server_global.config
tools/environment/: init.py
tools/project_temp/: CMakeLists.txt  lib.cpp  lib.h  lib.hpp  temp_list.txt  test_lib.cpp
tools/python/: add.py  update.py  utility.py
